Fix element visibility check for validation bubbles and SELECT popups.

- Do not use FrameView::boundsRect() for element visibility check
  It's scaled by minimum-scale. We should use VisualViewport::size().

- Introduce Element::visibleBoundsInViewport() to merge duplicated code in
  HTMLSelectElement and ValidationMessageClientImpl.

BUG=633457

Review-Url: https://codereview.chromium.org/2215333002
Cr-Commit-Position: refs/heads/master@{#410567}

Former-commit-id: 48565e7338d3f8d0cbfdb082f51e609b7bfd4624