third_party/WebKit/Source/core/html/HTMLSelectElement.h
@@ -144,7 +144,6 @@ public:
     // itemComputedStyle() returns nullptr only if the owner Document is not
     // active.  So, It returns a valid object when we open a popup.
     const ComputedStyle* itemComputedStyle(Element&) const;
-    IntRect elementRectRelativeToViewport() const;
     // Text starting offset in LTR.
     LayoutUnit clientPaddingLeft() const;
     // Text starting offset in RTL.
