third_party/WebKit/Source/web/ValidationMessageClientImpl.cpp
@@ -118,14 +118,7 @@ void ValidationMessageClientImpl::checkAnchorStatus(TimerBase*)
         return;
     }
 
-    // Check the visibility of the element.
-    // FIXME: Can we check invisibility by scrollable non-frame elements?
-    IntRect newAnchorRectInViewport = currentView()->contentsToViewport(m_currentAnchor->pixelSnappedBoundingBox());
-
-    // FIXME: This intersection eliminates the part of the rect outside the root view.
-    // If this is meant as a visiblity test, intersecting it against the viewport rect
-    // likely makes more sense.
-    newAnchorRectInViewport = intersection(currentView()->convertToRootFrame(currentView()->boundsRect()), newAnchorRectInViewport);
+    IntRect newAnchorRectInViewport = m_currentAnchor->visibleBoundsInVisualViewport();
     if (newAnchorRectInViewport.isEmpty()) {
         hideValidationMessage(*m_currentAnchor);
         return;
